# Automata

./: .gitignore  README.md  main.py  pyproject.toml  train_model.py
automata/: model.py
scripts/: train.py
