[project]
name = "automata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
]
